Fix bottom spacing for gene list on /data page

--- a/react-app/src/styles/global.css
+++ b/react-app/src/styles/global.css
@@ -1828,7 +1828,7 @@ ul {
   z-index: 1;
 
   margin: 0;
-  padding: 1rem 1rem 0 1rem;
+  padding: 1rem;
   border-radius: 5px;
 
   width: 222px;
